@@ -1,3 +1,7 @@
+Fri Feb 21 15:49:08 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* zsoelim/zsoelim.l: Internationalize usage and error messages.
+
 Fri Feb 21 15:46:04 GMT 2003  Colin Watson  <cjwatson@debian.org>
 
 	* src/check_mandirs.c (gripe_bogus_manpage, make_filename,
